[package]
name = "template"
version = "0.1.0"
edition = "2021"
authors = ["Lurk Lab Engineering <engineering@lurk-lab.com>"]
license = "MIT OR Apache-2.0"
# EDIT AS NEEDED
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []

# Similar to `release`, but preserves debug info
[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
lto = "thin"
incremental = false
codegen-units = 16
